complete first few specs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <title>Pizza Shop</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Pizza Shop</h1>
+    <form>
+      <label for="size">Select your size</label>
+      <select name="" id="size">
+        <option value="0">Small</option>
+        <option value="1">Medium</option>
+        <option value="2">Large</option>
+      </select>
+      <button type="submit">Order Pizza</button>
+    </form>
+    <div id="output">
+      <h3>Thank you for ordering</h3>
+      <p>your total is $<span id="cost"></span></p>
+    </div>
+  </div>
 </body>
 </html>
