add checkboxes for pizza toppings, push them into an array using javascript

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
         <option value="1">Medium</option>
         <option value="2">Large</option>
       </select>
+      <h6>Toppings:</h6>
+
+      <input type="checkbox" name="work-transportation" value="0"> Cheese<br>
+          <input type="checkbox" name="toppings" value="1.5">Pepperoni<br>
+          <input type="checkbox" name="toppings" value="1.5">Salami<br>
+          <input type="checkbox" name="toppings" value="1.5">Sausage<br>
+          <input type="checkbox" name="toppings" value="1.5">Chicken<br>
+          <input type="checkbox" name="toppings" value="1.5">Bacon<br>
+          <input type="checkbox" name="toppings" value="1.5">Spinach<br>
+          <input type="checkbox" name="toppings" value="1.5">Pineapple<br>
+          <input type="checkbox" name="toppings" value="1.5">Canadian Bacon
+
       <button type="submit">Order Pizza</button>
     </form>
     <div id="output">
