add toppingsTotal prototype

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <form>
       <label for="size">Select your size</label>
       <select name="" id="size">
-        <option value="0">Small</option>
-        <option value="1">Medium</option>
-        <option value="2">Large</option>
+        <option value="Small">Small</option>
+        <option value="Medium">Medium</option>
+        <option value="Large">Large</option>
       </select>
       <h6>Toppings:</h6>
 
-      <input type="checkbox" name="work-transportation" value="1.5"> Cheese<br>
-          <input type="checkbox" name="toppings" value="1.5">Pepperoni<br>
-          <input type="checkbox" name="toppings" value="1.5">Salami<br>
-          <input type="checkbox" name="toppings" value="1.5">Sausage<br>
-          <input type="checkbox" name="toppings" value="1.5">Chicken<br>
-          <input type="checkbox" name="toppings" value="1.5">Bacon<br>
-          <input type="checkbox" name="toppings" value="1.5">Spinach<br>
-          <input type="checkbox" name="toppings" value="1.5">Pineapple<br>
-          <input type="checkbox" name="toppings" value="1.5">Canadian Bacon
+      <input type="checkbox" name="work-transportation" value="0"> Cheese<br>
+          <input type="checkbox" name="toppings" value="1">Pepperoni<br>
+          <input type="checkbox" name="toppings" value="1">Salami<br>
+          <input type="checkbox" name="toppings" value="1">Sausage<br>
+          <input type="checkbox" name="toppings" value="1">Chicken<br>
+          <input type="checkbox" name="toppings" value="1">Bacon<br>
+          <input type="checkbox" name="toppings" value="1">Spinach<br>
+          <input type="checkbox" name="toppings" value="1">Pineapple<br>
+          <input type="checkbox" name="toppings" value="1">Canadian Bacon
 
       <button type="submit">Order Pizza</button>
     </form>
