update specs to more clearly respresent what the application does, organize checkbox content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </select>
       <h6>Toppings:</h6>
 
-      <input type="checkbox" name="work-transportation" value="0"> Cheese<br>
+      <input type="checkbox" name="work-transportation" value="0">Cheese (no charge)<br>
           <input type="checkbox" name="toppings" value="1">Pepperoni<br>
           <input type="checkbox" name="toppings" value="1">Salami<br>
           <input type="checkbox" name="toppings" value="1">Sausage<br>
