add additional specs to README.md add image to img directory, link image in index.html format scripts.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Pizza Pizzaz!</h1>
+      <h3>Rated Best Pizza In Town By Me, Because I Said So</h3>
+      <img src="img/pizza.jpg" alt="Picture of a pizza">
     </div>
+
+    <h4>A Little Bit About Us:</h4>
+    <p class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nulla consequuntur dolorum illum, suscipit, consectetur sed dicta eum autem veritatis quod quas quibusdam fuga quisquam.</p>
     <form>
       <label for="size">Select your size</label>
       <select name="" id="size">
@@ -21,7 +26,7 @@
         <option value="Medium">Medium (13.25)</option>
         <option value="Large">Large (15.25)</option>
       </select>
-      <h6>Toppings: $1 ea for Small, $1.50 for Medium, $2 for Large</h6><br>
+      <h6>Toppings: $1 each for Small, $1.50 each for Medium, $2 each for Large</h6><br>
       <div class="row">
         <div class="col-sm">
           <h6>Sauce:</h6>
@@ -54,8 +59,9 @@
       <br><button type="submit">Order Pizza</button>
     </form><br>
     <div id="output">
-      <h3>Thank you for ordering</h3>
+      <h3>Thank You For Ordering</h3>
       <p>your total is $<span id="cost"></span></p>
+      <P><a href="index.html">Click Here</a> to order another pizza.</P>
     </div>
   </div>
 </body>
