add pizzaSize prototype to Pizza constructor

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <form>
         <label for="size">Select your size</label>
         <select name="" id="size">
-          <option value="Small">Small (11.25)</option>
-          <option value="Medium">Medium (13.25)</option>
-          <option value="Large">Large (15.25)</option>
+          <option value="Small">Small ($11.25)</option>
+          <option value="Medium">Medium ($13.25)</option>
+          <option value="Large">Large ($15.25)</option>
         </select>
         <h6>Toppings: $1 each for Small, $1.50 each for Medium, $2 each for Large</h6><br>
         <div class="row">
@@ -79,18 +79,33 @@
     <div id="output">
       <div class="card">
         <img src="img/pizza.jpg" class="card-img-top" alt="picture of a pizza">
-        <div class="card-body">
+        <div class="card-body text-center">
           <h5 class="card-title">Thank You For Ordering</h5>
-          <p class="card-text">your total is $<span id="cost"></span></p>
-          <P><a href="index.html">Click Here</a> to order another pizza.</P></p>
+          <p class="card-text text-center" id="">Your total is: $<span id="cost"></span></p>
+          <P><a href="index.html">Click Here</a> to order another pizza.</P>
         </div>
       </div>
     </div>
-  </div>
+  </div><br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </body>
 
 </html>
-
-<!-- <h3>Thank You For Ordering</h3>
-      <p>your total is $<span id="cost"></span></p>
-      <P><a href="index.html">Click Here</a> to order another pizza.</P> -->
