refactor values for toppings

--- a/index.html
+++ b/index.html
@@ -47,30 +47,30 @@
         <div class="row">
           <div class="col-sm">
             <h6>Sauce:</h6>
-            <input type="checkbox" name="toppings" value="0">Red Sauce (No charge)<br>
-            <input type="checkbox" name="toppings" value="1">Alfredo<br>
-            <input type="checkbox" name="toppings" value="1">Pesto<br>
-            <input type="checkbox" name="toppings" value="0">No Sauce (no charge)<br><br>
+            <input type="checkbox" name="toppings" value="Red Sauce">Red Sauce<br>
+            <input type="checkbox" name="toppings" value="Alfredo">Alfredo<br>
+            <input type="checkbox" name="toppings" value="Pesto">Pesto<br>
+            <input type="checkbox" name="toppings" value="No Sauce">No Sauce<br><br>
             <h6>Cheese:</h6>
-            <input type="checkbox" name="toppings" value="0">Mozzarella Cheese(no charge)<br>
-            <input type="checkbox" name="toppings" value="0">No Cheese (no charge)<br>
-            <input type="checkbox" name="toppings" value="1">Feta<br>
+            <input type="checkbox" name="toppings" value="Mozzarella Cheese">Mozzarella Chees<br>
+            <input type="checkbox" name="toppings" value="No Cheese">No Cheese<br>
+            <input type="checkbox" name="toppings" value="Feta">Feta<br>
           </div>
           <div class="col-sm">
             <h6>Meats:</h6>
-            <input type="checkbox" name="toppings" value="1">Pepperoni<br>
-            <input type="checkbox" name="toppings" value="1">Salami<br>
-            <input type="checkbox" name="toppings" value="1">Sausage<br>
-            <input type="checkbox" name="toppings" value="1">Chicken<br>
-            <input type="checkbox" name="toppings" value="1">Bacon<br>
+            <input type="checkbox" name="toppings" value="Pepperoni">Pepperoni<br>
+            <input type="checkbox" name="toppings" value="Salami">Salami<br>
+            <input type="checkbox" name="toppings" value="Sausage">Sausage<br>
+            <input type="checkbox" name="toppings" value="Chicken">Chicken<br>
+            <input type="checkbox" name="toppings" value="Bacon">Bacon<br>
           </div>
           <div class="col-sm">
             <h6>Veggies and Fruit:</h6>
-            <input type="checkbox" name="toppings" value="1">Spinach<br>
-            <input type="checkbox" name="toppings" value="1">Pineapple<br>
-            <input type="checkbox" name="toppings" value="1">Canadian Bacon<br>
-            <input type="checkbox" name="toppings" value="1">Olives<br>
-            <input type="checkbox" name="toppings" value="1">jalapeños
+            <input type="checkbox" name="toppings" value="Spinach">Spinach<br>
+            <input type="checkbox" name="toppings" value="Pineapple">Pineapple<br>
+            <input type="checkbox" name="toppings" value="Canadian Bacon">Canadian Bacon<br>
+            <input type="checkbox" name="toppings" value="Olives">Olives<br>
+            <input type="checkbox" name="toppings" value="jalapeños">jalapeños
           </div>
         </div><br>
         <button type="submit" class="btn btn-danger ">Order Pizza</button><br>
